--- a/detalhesproduto.html
+++ b/detalhesproduto.html
@@ -23,40 +23,35 @@
             <div class="breadcrumb">
                 <span><a href="index.html">Home</a></span>
                 <span><a href="listaprodutos.html">Produtos</a></span>
-                <span>Produto</span>
+                <span id="product-name-breadcrumb">Produto</span>
             </div>
             <div class="fila">
                 <div class="col-6">
                     <div class="img-produto">
                         <div class="img-produto-principal">
-                            <img src="img/img-1.webp" alt="CHEETAH GLAM HOODIE">
+                            <img id="product-image" src="" alt="Produto">
                         </div>
                         <div class="img-produto-slider">
-                            <img src="img/img-1.webp" alt="Thumbnail 1">
-                            <img src="img/img-2.webp" alt="Thumbnail 2">
-                            <img src="img/img-3.webp" alt="Thumbnail 3">
+                            <img id="thumbnail-1" src="" alt="Thumbnail 1">
+                            <img id="thumbnail-2" src="" alt="Thumbnail 2">
+                            <img id="thumbnail-3" src="" alt="Thumbnail 3">
                         </div>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="titulo">
-                        <h2>CHEETAH GLAM HOODIE</h2>
+                        <h2 id="product-name">Produto</h2>
                     </div>
-                    <div class="rating">
-                        <span class="bx bxs-star"></span>
-                        <span class="bx bxs-star"></span>
-                        <span class="bx bxs-star"></span>
-                        <span class="bx bxs-star"></span>
-                        <span class="bx bxs-star-half"></span>
-                        <span class="review">(5 Avaliações)</span>
+                    <div class="rating" id="product-stars">
+                        <!-- Dynamic star ratings will be added here -->
                     </div>
                     <div class="preco">
-                        <span class="offer-price">€79,99</span>
-                        <span class="sale-price">€99,99</span>
+                        <span class="offer-price" id="product-price">€0.00</span>
+                        <span class="sale-price" id="product-sale-price">€0.00</span>
                     </div>
                     <div class="descricao">
                         <h3>Descrição do Produto</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae lorem quis massa malesuada lacinia.</p>
+                        <p id="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae lorem quis massa malesuada lacinia.</p>
                     </div>
                     <div class="tamanhos">
                         <h4>Tamanho</h4>
