--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon Pere Vintage</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -12,8 +13,48 @@
         <a href="#">Pagina</a>
         <a href="listaprodutos.html">Produtos</a>
         <a href="contacto.html">Contacto</a>
+        <a href="#" id="login-register">Login</a>
         <a href="cart.html"><i class='bx bx-cart'></i></a>
     </nav>
+
+    <!-- Add the modal for login/register here -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <div class="form-container" id="login-form">
+                <h1>Welcome back</h1>
+                <p>Please enter your details to sign in.</p>
+                <div class="social-icons">
+                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+                </div>
+                <form action="/users/login" method="post">
+                    <input type="email" name="email" placeholder="Email" autocomplete="off" required>
+                    <input type="password" name="password" placeholder="Password" required>
+                    <div class="remember-forgot">
+                        <label><input type="checkbox" name="remember"> Remember for 30 days</label>
+                        <a href="#">Forgot password?</a>
+                    </div>
+                    <button type="submit">Sign in</button>
+                </form>
+                <p class="signup-link">Don't have an account? <a href="#" id="show-register">Create account</a></p>
+            </div>
+            <div class="form-container hidden" id="register-form">
+                <h1>Create Account</h1>
+                <p>Register with your personal details to use all of the site's features.</p>
+                <div class="social-icons">
+                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+                </div>
+                <form action="/users/register" method="post">
+                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="password" name="password" placeholder="Password" required>
+                    <button type="submit">Sign Up</button>
+                </form>
+                <p class="signup-link">Already have an account? <a href="#" id="show-login">Sign in</a></p>
+            </div>
+            <span class="close">&times;</span>
+        </div>
+    </div>
 
     <div class="header-circle">
         <div class="outer-circle-large">
@@ -70,9 +111,51 @@
         <p>Website exclusivo de Mon Père | Porto. Todos os direitos reservados. &copy; 2024</p>
     </div>
 
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
     <script src="js/script.js"></script>
+    <script>
+    document.addEventListener('DOMContentLoaded', function () {
+    const modal = document.getElementById('modal');
+    const loginRegisterLink = document.getElementById('login-register');
+    const closeModal = document.getElementsByClassName('close')[0];
+    const loginForm = document.getElementById('login-form');
+    const registerForm = document.getElementById('register-form');
+    const showRegisterLink = document.getElementById('show-register');
+    const showLoginLink = document.getElementById('show-login');
+
+    loginRegisterLink.onclick = function () {
+        modal.style.display = 'flex';
+        modal.classList.add('fade-in');
+        modal.classList.remove('fade-out');
+    }
+
+    closeModal.onclick = function () {
+        modal.classList.add('fade-out');
+        modal.classList.remove('fade-in');
+        setTimeout(() => modal.style.display = 'none', 500);
+    }
+
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.classList.add('fade-out');
+            modal.classList.remove('fade-in');
+            setTimeout(() => modal.style.display = 'none', 500);
+        }
+    }
+
+    showRegisterLink.onclick = function (event) {
+        event.preventDefault();
+        loginForm.classList.add('hidden');
+        registerForm.classList.remove('hidden');
+    }
+
+    showLoginLink.onclick = function (event) {
+        event.preventDefault();
+        registerForm.classList.add('hidden');
+        loginForm.classList.remove('hidden');
+    }
+});
+    </script>
 </body>
 </html>
